--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -5,6 +5,6 @@
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
         <button type="button" class="btn btn-primary border-0" (click)="dados_baja()">Dados de Baja</button>
         <button type="button" class="btn btn-primary border-0" (click)="datos_escolares()">Datos Escolares</button>
-        <button type="button" class="btn btn-primary border-0">Cerrar Sesión</button>
-    </div>
+        <button type="button" class="btn btn-primary border-0" (click)="datos_ingreso()">Datos de Ingreso</button>
+        
 </div>
