--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -9,10 +9,10 @@
     <h1 class="mt-5 font-weight-bold mb-4 text-center">Panel de Administración </h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-primary border-0" type="submit">Buscar</button>
+        <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
     </form>
     <div>
-        <button class="btn col2 btn-sm border-0 text-white me-1 col-1 mt-" (click)="getAlumno()">Detalles</button>
+        <button class="btn btn-danger btn-sm border-0 text-white me-1 col-1 mt-3" (click)="getAlumno()">Detalles</button>
     </div>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
@@ -31,8 +31,8 @@
                 <div class="col-3">{{Alumno.nombres}}</div>
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
-                <button type="button" class="btn btn-primary btn-sm border-0 me-1 col-2 text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
-                <button type="button" class="btn col3 btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(Alumno.id)">Eliminar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 col-2 text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(Alumno.id)">Eliminar</button>
             </div>
         </tbody>
     </table>
