--- a/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
@@ -1,9 +1,5 @@
 <div class="mt-4 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Información</h1>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-primary border-0" type="submit">Buscar</button>
-    </form>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center">Información Datos Escolares</h1>
     <div class="table table-responsive" >
         <table class="table table-striped table-bordered mt-5">
             <thead class="mb-3 btn-primary">
@@ -30,6 +26,7 @@
                 </tr>
             </tbody>
         </table>
+        <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click)="regresar()">Regresar</button>
     </div>
     
 </div>
