--- a/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch/watch.component.html
@@ -2,12 +2,8 @@
 <app-navv></app-navv>
 
 <!-- Ver los datos de alumno -->
-<div class="mt-4 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Información</h1>
-    <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-primary border-0" type="submit">Buscar</button>
-    </form>
+<div class="mt-5 container-lg">
+    <h1 class="mt-5 font-weight-bold mt-4 text-center">Información Datos Personales</h1>
     <div class="table table-responsive" >
         <table class="table table-striped table-bordered mt-5">
             <thead class="mb-3 btn-primary">
