added dropdown and style to the admin

--- a/frontend/recursos/src/app/components/admin/login/login.component.html
+++ b/frontend/recursos/src/app/components/admin/login/login.component.html
@@ -10,7 +10,7 @@
         <div class="col-lg-5 mt-5 loggin">
             <div class="px-lg-5 py-lg-4 p-4">
                 <!-- Titulo -->
-                <h1 class="mt-5 font-weight-bold mb-4 text-center">Administracion</h1>
+                <h1 class="mt-5 font-weight-bold mb-4 text-center">Administración</h1>
                 <!-- Formulario -->
                 <form>
                     <div class="mb-4">
