--- a/frontend/recursos/src/app/components/user/principal/principal.component.html
+++ b/frontend/recursos/src/app/components/user/principal/principal.component.html
@@ -10,8 +10,8 @@
             </div>
         <div class="col-4 display-2">
             <div class="d-grid justify-content-center align-items-center boton">
-                <button type="button" class="btn btn-white letter" (click)="aspirante()"> Soy Aspirante</button>
-                <button type="button" class="btn btn-white letter mb-5" (click)="login()">Soy Administrador</button>
+                <button type="button" class="btn btn-secondary letter border-0" (click)="aspirante()"> Soy Aspirante</button>
+                <button type="button" class="btn btn-success letter mb-5 border-0" (click)="login()">Soy Administrador</button>
             </div>
         </div>
     </div>
