--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -2,9 +2,17 @@
     <!-- Barra de Opciones -->
     <div class="btn-group w-100 mt-5" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-primary border-0" (click)="inicio()">Inicio</button>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
+                Gestionar Datos
+            </button>
+            <ul class="dropdown-menu btn-light">
+                <li><a class="dropdown-item" (click)="datos_escolares()">Escolares</a></li>
+                <li><a class="dropdown-item" (click)="datos_ingreso()">Ingreso</a></li>
+                <li><a class="dropdown-item" (click)="datos_ftd()">FTD</a></li>
+                <li><a class="dropdown-item" (click)="datos_personales()">Personales</a></li>
+            </ul>
+        </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
         <button type="button" class="btn btn-primary border-0" (click)="dados_baja()">Dados de Baja</button>
-        <button type="button" class="btn btn-primary border-0" (click)="datos_escolares()">Datos Escolares</button>
-        <button type="button" class="btn btn-primary border-0" (click)="datos_ingreso()">Datos de Ingreso</button>
-        
 </div>
