--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/datos-ingreso.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ingreso/datos-ingreso.component.html
@@ -4,12 +4,12 @@
 <app-barra-opciones></app-barra-opciones>
 
 <div class="mt-3 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Datos de Ingreso</h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Datos de Ingreso</h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-primary border-0" type="submit">Buscar</button>
     </form>
-    <button class="btn btn-primary btn-sm border-0 text-white me-1 mt-3" (click)="obtenerIngreso()">Detalles</button>
+    <button class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" (click)="obtenerIngreso()">Detalles</button>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
