--- a/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/personales-baja/personales-baja.component.html
@@ -6,7 +6,7 @@
 
 <!-- Panel del admin -->
 <div class="mt-3 container-lg">
-    <h1 class="mt-5 font-weight-bold mb-4 text-center">Datos Personales (Baja)</h1>
+    <h1 class="mt-5 font-weight-bold mb-4 text-center col-title">Datos Personales (Baja)</h1>
     <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
