--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/datos-ftd.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-ftd/datos-ftd.component.html
@@ -9,26 +9,26 @@
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
     </form>
-    <button class="btn btn-danger btn-sm border-0 text-white me-1 mt-3">Detalles</button>
+    <button class="btn btn-danger btn-sm border-0 text-white me-1 mt-3" (click)="obtenerDatosFTD()">Detalles</button>
     <div class="mt-4">
         <div class="row btn-primary text-white text-center">
             <div class="col-1">ID</div>
             <div class="col-3">Nombre del Proyecto</div>
             <div class="col-3">Avance del Proyecto</div>
-            <div class="col-2">Evaluaciòn del Proyecto</div>
+            <div class="col-2">Evaluación del Proyecto</div>
             <div class="col-1">Editar</div>
             <div class="col-1">Eliminar</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
-        <tbody >
-            <div class="row text-center">
-                <div class="col-1"></div>
-                <div class="col-3"></div>
-                <div class="col-3"></div>
-                <div class="col-2"></div>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col-1 text-white mt-1">Editar</button>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1">Eliminar</button>
+        <tbody *ngFor="let datosFTD of datosFTD">
+            <div class="row text-center" *ngIf="datosFTD.activo == true">
+                <div class="col-1">{{datosFTD.id}}</div>
+                <div class="col-3">{{datosFTD.nombreProyecto}}</div>
+                <div class="col-3">{{datosFTD.avanceProyecto}}</div>
+                <div class="col-2">{{datosFTD.evaluacionProyecto}}</div>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 col-1 text-white mt-1" [routerLink]="['/registro-datos-ftd', datosFTD.id]">Editar</button>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteDatosFTD(datosFTD.id)">Eliminar</button>
             </div>
         </tbody>
     </table>
