--- a/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
@@ -1,3 +1,6 @@
+<!-- Nav -->
+<app-navv></app-navv>
+
 <div class="mt-4 container-lg">
     <h1 class="mt-5 font-weight-bold mb-4 text-center">Información Datos Escolares</h1>
     <div class="table table-responsive" >
@@ -26,7 +29,7 @@
                 </tr>
             </tbody>
         </table>
-        <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click)="regresar()">Regresar</button>
+        
     </div>
-    
+    <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click)="regresar()">Regresar</button>
 </div>
