--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ftd/registro-datos-ftd.component.html
@@ -46,11 +46,11 @@
         </div>
         <div class="col-md-3 mt-4">
             <label class="form-label">Fecha de Ingreso</label>
-            <input type="datetime" class="form-control" placeholder="Fecha de Ingreso" id="fechaIngreso" name="fechaIngreso" [(ngModel)]="datosFTD.fechaIngreso">
+            <input type="date" class="form-control" placeholder="Fecha de Ingreso" id="fechaIngreso" name="fechaIngreso" [(ngModel)]="datosFTD.fechaIngreso">
         </div>
         <div class="col-md-3 mt-4">
             <label class="form-label">Fecha de Término</label>
-            <input type="datetime" class="form-control" placeholder="Fecha de Término" id="fechaTermino" name="fechaTermino" [(ngModel)]="datosFTD.fechaTermino">
+            <input type="date" class="form-control" placeholder="Fecha de Término" id="fechaTermino" name="fechaTermino" [(ngModel)]="datosFTD.fechaTermino">
         </div>
         <div class="col-md-2 mt-4">
             <label class="form-label">Grupo</label>
