--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
@@ -49,10 +49,7 @@
         <div class="col-md-4 position-relative mt-4">
             <label for="modalidad" class="form-label">Modalidad</label>
             <select class="form-select" id="modalidad" name="modalidad" [(ngModel)]="ingreso.modalidad">
-                <option selected disabled value="">Elige una de las opciones</option>
-                <option value="PRESENCIAL">PRESENCIAL</option>
-                <option value="En Linea">En Linea</option>
-                <option value="Hibirida">Hìbrida</option>
+                <option value="mod.id" *ngFor="let mod of modalidad"></option>
             </select>
         </div>
         <div class="col-md-4 position-relative mt-4">
