--- a/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
+++ b/frontend/recursos/src/app/components/admin/panel/watch-datos-escolares/watch-datos-escolares.component.html
@@ -23,7 +23,7 @@
                     <td class="col">{{escolares.universidad}}</td>
                     <td class="col">{{escolares.matriculaEscolar}}</td>
                     <td class="col">{{escolares.modalidadEscolar}}</td>
-                    <td class="col">{{escolares.planEducativo}}</td>
+                    <td class="col">{{escolares.planesEducativos}}</td>
                     <td class="col">{{escolares.periodo}}</td>
                     <td>
                 </tr>
