--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -11,6 +11,7 @@
                 <li><a class="dropdown-item" (click)="datos_ingreso()">Ingreso</a></li>
                 <li><a class="dropdown-item" (click)="datos_ftd()">FTD</a></li>
                 <li><a class="dropdown-item" (click)="datos_personales()">Personales</a></li>
+                <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
