--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
@@ -9,25 +9,17 @@
     
     <div class="row container-md " >
         <div class="col-md-3 position-relative mt-4">
-            <label for="tramite" class="form-label">Modalidad Escolar</label>
-            <select class="form-select" id="tramite" name="tramite" [(ngModel)]="ingreso.tramite">
-                <option selected disabled value="">Elige una de las opciones</option>
-                    <option value="Estadìas">Estadìas</option>
-                    <option value="PRACTICAS_PROFESIONALES">PRACTICAS_PROFESIONALES</option>
-                    <option value="Residencias">Residencias</option>
-                    <option value="Servicio Social">Servicio Social</option>
-                    <option value="Capacitaciòn">Capacitaciòn</option>
+            <label for="tramite" class="form-label">Tramite</label>
+            <select [compareWith]="compararTramite" class="form-select" id="tramite" name="tramite" [(ngModel)]="ingreso.tramite">
+                <option selected disabled value="" [ngValue]="undefined">Elige una de las opciones</option>
+                <option *ngFor="let tramite of tramite" [ngValue]="tramite">{{tramite.nombreTramite}}</option>
             </select>
         </div>   
         <div class="col-md-3 position-relative mt-4">
             <label for="perfilamiento" class="form-label">Perfilamiento</label>
-            <select class="form-select" id="perfilamiento" name="perfilamiento" [(ngModel)]="ingreso.perfilamiento">
-                <option selected disabled value="">Elige una de las opciones</option>
-                <option value="ProgramacionFrontend">ProgramacionFrontend</option>
-                <option value="Programaciòn Backend">Programaciòn Backend</option>
-                <option value="Fullstack">Fullstack</option>
-                <option value="Infraestuctura">Infraestructura</option>
-                <option value="Negocios Digitales">Negocios Digitales</option>
+            <select [compareWith]="compararPerfilamiento" class="form-select" id="perfilamiento" name="perfilamiento" [(ngModel)]="ingreso.perfilamiento">
+                <option selected disabled value="" [ngValue]="undefined">Elige una de las opciones</option>
+                <option *ngFor="let perfilamiento of perfilamiento" [ngValue]="perfilamiento">{{perfilamiento.nombrePerfilamiento}}</option>
             </select>
         </div> 
         <div class="col-md-3 position-relative mt-4">
@@ -48,8 +40,9 @@
         </div> 
         <div class="col-md-4 position-relative mt-4">
             <label for="modalidad" class="form-label">Modalidad</label>
-            <select class="form-select" id="modalidad" name="modalidad" [(ngModel)]="ingreso.modalidad">
-                <option value="mod.id" *ngFor="let mod of modalidad"></option>
+            <select [compareWith]="compararModalidad" class="form-select" id="modalidad" name="modalidad" [(ngModel)]="ingreso.modalidad">
+                <option [ngValue]="undefined" selected disabled value>Elige una de las modalidades</option>
+                <option value="mod.id" *ngFor="let mod of modalidad" [ngValue]="mod">{{mod.nombre}}</option>
             </select>
         </div>
         <div class="col-md-4 position-relative mt-4">
