--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -1,7 +1,6 @@
 <div class="mt-4">
     <!-- Barra de Opciones -->
     <div class="btn-group w-100 mt-5" role="group" aria-label="Basic example">
-        <button type="button" class="btn btn-primary border-0" (click)="inicio()">Inicio</button>
         <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
                 Gestionar Datos
@@ -14,15 +13,24 @@
                 <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
             </ul>
         </div>
-        <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
+        <div class="dropdown">
             <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
-                Dados de Baja
+                Datos Auxiliares
             </button>
             <ul class="dropdown-menu btn-light">
-                <li><a class="dropdown-item" (click)="dados_baja_escolares()">Escolares</a></li>
-                <li><a class="dropdown-item">Ingreso</a></li>
-                <li><a class="dropdown-item" (click)="datos_baja_ftd()">FTD</a></li>
-                <li><a class="dropdown-item" (click)="dados_baja()">Personales</a></li>
+                <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
             </ul>
+        </div>
+        <div class="dropdown">
+            <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
+                <button class="btn btn-primary dropdown-toggle border-0" type="button" data-bs-toggle="dropdown" aria-expanded="true">
+                    Dados de Baja
+                </button>
+                <ul class="dropdown-menu btn-light">
+                    <li><a class="dropdown-item" (click)="dados_baja_escolares()">Escolares</a></li>
+                    <li><a class="dropdown-item">Ingreso</a></li>
+                    <li><a class="dropdown-item" (click)="datos_baja_ftd()">FTD</a></li>
+                    <li><a class="dropdown-item" (click)="dados_baja()">Personales</a></li>
+                </ul>
         </div>
 </div>
