--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/universidad/universidad.component.html
@@ -13,13 +13,13 @@
         <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Agregar Universidad</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Nombre de la Universidad</label>
-                    <input type="text" class="form-control" placeholder="Ingresa el nombre de tu universidad" id="universidad" name="universidad" [(ngModel)]="uni.nombre">
+                    <input type="text" class="form-control" placeholder="Nombre de la Universidad" id="email" name="email" [(ngModel)]="uni.nombre">
                 </div>
             </div>
             <div class="modal-footer">
@@ -44,8 +44,31 @@
             <div class="row text-center">
                 <div class="col-1">{{uni.id}}</div>
                 <div class="col-7">{{uni.nombre}}</div>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/registro-datos-escolares/universidad', uni.id]">Editar</button>
-                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1">Eliminar</button>
+
+                <!-- Editar universidad -->
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/datos-escolares/universidad', uni.id]" data-bs-toggle="modal" data-bs-target="#edit-uni">Editar</button>
+
+                <div class="modal fade" id="edit-uni" tabindex="-1" aria-labelledby="editar" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="editar">Editar Universidad</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="mb-3">
+                                <label for="exampleFormControlInput1" class="form-label">Nombre de la Universidad</label>
+                                <input type="text" class="form-control" placeholder="Nombre de la Universidad" id="email" name="email" [(ngModel)]="uni.nombre">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Cerrar</button>
+                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="update()">Editar</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+                <button type="button" class="btn btn-success btn-sm border-0 me-1 text-white col-1 mt-1" (click)="deleteUni(uni.id)">Eliminar</button>
             </div>
         </tbody>
     </table>
