--- a/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
+++ b/frontend/recursos/src/app/components/user/registro-aspirante/registro-datos-ingreso/registro-datos-ingreso.component.html
@@ -5,7 +5,7 @@
         
 <form>
     <div class="container-md mt-5">
-        <h1 class="text-center mt-5 col-title">{{ingreso.id ? 'Edición': 'Registro'}} de Datos Personales</h1>
+        <h1 class="text-center mt-5 col-title">{{ingreso.id ? 'Edición': 'Registro'}} de Datos de Ingreso</h1>
     
     <div class="row container-md " >
         <div class="col-md-3 position-relative mt-4">
