--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -21,6 +21,7 @@
                 <li><a class="dropdown-item" (click)="modalidad()">Modalidad Escolar</a></li>
                 <li><a class="dropdown-item" (click)="plan_educativo()">Plan Educativo</a></li>
                 <li><a class="dropdown-item" (click)="perfilamiento()">Perfilamiento</a></li>
+                <li><a class="dropdown-item" (click)="tramite()">Trámite</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
