--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -18,10 +18,11 @@
             </button>
             <ul class="dropdown-menu btn-light">
                 <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
-                <li><a class="dropdown-item" (click)="modalidad()">Modalidad Escolar</a></li>
+                <li><a class="dropdown-item" (click)="modalidadEscolar()">Modalidad Escolar</a></li>
                 <li><a class="dropdown-item" (click)="plan_educativo()">Plan Educativo</a></li>
                 <li><a class="dropdown-item" (click)="perfilamiento()">Perfilamiento</a></li>
                 <li><a class="dropdown-item" (click)="tramite()">Trámite</a></li>
+                <li><a class="dropdown-item" (click)="modalidad()">Modalidad</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
