agregando ModalidadEscolarController a Datos Escolares por parte del Backend

--- a/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/modalidad-escolar/modalidad-escolar.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/datos-escolares/modalidad-escolar/modalidad-escolar.component.html
@@ -46,13 +46,13 @@
                 <div class="col-7">{{mod.nombre}}</div>
 
                 <!-- Editar universidad -->
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/datos-escolares/modalidad', mod.id]" data-bs-toggle="modal" data-bs-target="#edit-uni">Editar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-5 col-2 text-white mt-1" [routerLink]="['/datos-escolares/modalidad-escolar', mod.id]" data-bs-toggle="modal" data-bs-target="#edit-uni">Editar</button>
 
                 <div class="modal fade" id="edit-uni" tabindex="-1" aria-labelledby="editar" aria-hidden="true">
                     <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="editar" (click)="update()">Editar Modalidad Escolar</h1>
+                            <h1 class="modal-title fs-5" id="editar">Editar Modalidad Escolar</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -63,7 +63,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary border-0" data-bs-dismiss="modal">Cerrar</button>
-                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal">Editar</button>
+                            <button type="button" class="btn btn-primary border-0" data-bs-dismiss="modal" (click)="update()">Editar</button>
                         </div>
                     </div>
                     </div>
