--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -22,7 +22,7 @@
             <div class="col-2">Primer Apellido</div>
             <div class="col-2">Segundo Apellido</div>
             <div class="col-2">Editar</div>
-            <div class="col-1">Eliminar</div>
+            <div class="col-1">Dar de Baja</div>
         </div>
     </div>
     <table class="table table-striped mt-3">
@@ -33,7 +33,7 @@
                 <div class="col-2">{{Alumno.primerApellido}}</div>
                 <div class="col-2">{{Alumno.segundoApellido}}</div>
                 <button type="button" class="btn btn-success btn-sm border-0 me-1 col-2 text-white mt-1" [routerLink]="['/estudiante', Alumno.id]">Editar</button>
-                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(Alumno.id)">Eliminar</button>
+                <button type="button" class="btn btn-secondary btn-sm border-0 me-1 text-white col-1 mt-1" (click) ="deleteEstudiante(Alumno.id)">Dar de Baja</button>
             </div>
         </tbody>
     </table>
