--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -8,7 +8,7 @@
 <div class="mt-3 container-lg">
     <h1 class="mt-5 font-weight-bold mb-4 text-center">Panel de Administración </h1>
     <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" name="filterPostlL" placeholder="Search" [(ngModel)]="searchTerm" aria-label="Search">
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
     </form>
     <h1 class="mt-1 font-weight-bold mb-4 text-center col-title">Datos Personales</h1>
@@ -26,7 +26,7 @@
         </div>
     </div>
     <table class="table table-striped mt-3">
-        <tbody *ngFor="let Alumno of alumno">
+        <tbody *ngFor="let Alumno of alumno | pipes: searchTerm">
             <div class="row text-center" *ngIf="Alumno.activo == true" >
                 <div class="col-1">{{Alumno.id}}</div>
                 <div class="col-3">{{Alumno.nombres}}</div>
