agregando el filtro a los datos personales dados de baja

--- a/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
+++ b/frontend/recursos/src/app/components/admin/panel-admin/panel-admin.component.html
@@ -8,7 +8,7 @@
 <div class="mt-3 container-lg">
     <h1 class="mt-5 font-weight-bold mb-4 text-center">Panel de Administración </h1>
     <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" name="filterPostlL" placeholder="Search" [(ngModel)]="searchTerm" aria-label="Search">
+        <input class="form-control me-2" type="search" name="searchTerm" placeholder="Search" [(ngModel)]="searchTerm" aria-label="Search">
         <button class="btn btn-outline-success border-0" type="submit">Buscar</button>
     </form>
     <h1 class="mt-1 font-weight-bold mb-4 text-center col-title">Datos Personales</h1>
