--- a/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
+++ b/frontend/recursos/src/app/components/admin/barra-opciones/barra-opciones.component.html
@@ -20,9 +20,14 @@
                 <li><a class="dropdown-item" (click)="universidad()">Universidad</a></li>
                 <li><a class="dropdown-item" (click)="modalidadEscolar()">Modalidad Escolar</a></li>
                 <li><a class="dropdown-item" (click)="plan_educativo()">Plan Educativo</a></li>
+                <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" (click)="perfilamiento()">Perfilamiento</a></li>
                 <li><a class="dropdown-item" (click)="tramite()">Trámite</a></li>
                 <li><a class="dropdown-item" (click)="modalidad()">Modalidad</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item">Beca</a></li>
+                <li><a class="dropdown-item">Grupo</a></li>
+                <li><a class="dropdown-item">Tutor</a></li>
             </ul>
         </div>
         <button type="button" class="btn btn-primary border-0">Gestionar Alumno</button>
